2000-10-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k10

	* ntpd/refclock_wwvb.c (wwvb_start): Cosmetic reorder.
	* ntpd/refclock_atom.c (RANGEGATE): Cleanup.  Add ASTAGE.
	Add ppsparams to struct ppsunit.
	(atom_start): Init peer->burst to ASTAGE.
	(atom_shutdown): Multi-handle
	(atom_pps): Multi-handle
	(atom_pps): RANGEGATE cleanup
	(atom_poll): Poll count cleanup.  Error check cleanup.  Burst cleanup.
	* ntpd/ntp_refclock.c (refclock_transmit): Lose the pre-burst
	check poll_update().
	(refclock_sample): Fix the jitter calc.
	(refclock_receive): Pass the jitter to the clock_filter().

	* ntpd/ntp_proto.c (clock_update): If we lose sync, reset the poll
	to NTP_MINDPOLL.
	(poll_update): Poll wiggles.  Make sure peer->nextdate is timely.
	(clock_select): If we lose sync, reset the poll to NTP_MINDPOLL.
	* ntpd/ntp_loopfilter.c (local_clock): Show the asocid in debug
	output.  popcorn debug message changes.  Clamp the poll interval
	if the system peer has changed.  PPS wiggle changes.
	From Dave Mills.

2000-10-16  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_pcf.c (pcf_start): 
	* html/driver35.htm: 
	The radio clock transmits 69 bits with a period of 2.5
	milliseconds per bit. Thus the driver now sets the default
	calibration offset to 0.1725 (69 * 2.5 = 172.5).
	Its now possible to disable the check of the radio clock's
	synchronisation status bit. Several users requested this option.
	From: Andreas Voegele <andreas.voegele@gmx.de>

	* html/refclock.htm:
	* html/rdebug.htm:
	* html/prefer.htm:
	* html/pps.htm:
	* html/ntpdc.htm:
	* html/miscopt.htm:
	* html/ldisc.htm:
	* html/kern.htm:
	* html/index.htm:
	* html/exec.htm:
	* html/driver22.htm: 
	* html/clockopt.htm: 
	Updates from Dave Mills

	* ntpd/ntp_intres.c (request): Sanity check the size of the response

2000-10-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpq/ntpq_ops.c (dopeers): Daev didn't like the patch to show
	the units on the times...